GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <inlineHelpText>TMS specific field.</inlineHelpText>
    <label>Account ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>