GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Account_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Type__c</fullName>
    <inlineHelpText>TMS specific field.</inlineHelpText>
    <label>Account ID Type</label>
    <length>35</length>
    <type>Text</type>
</CustomField>