GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Action_required__c.field-meta.xml
<CustomField>
    <fullName>Action_required__c</fullName>
    <formula>IF(No_Further_Action_Required__c = TRUE, &quot;In this case, no further action is required for the record below.&quot;,&quot;Please go to the Compensation record below to see the reason for the rejection and to make the changes that have been requested.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action required</label>
    <type>Text</type>
</CustomField>