GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Additional_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compensation__c</fullName>
    <description>This shows the additional compensation given</description>
    <inlineHelpText>This shows the additional compensation given</inlineHelpText>
    <label>Additional Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>