GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Additional_Compensation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compensation_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Additional Compensation Rule applied for this compensation</description>
    <label>Additional Compensation Rule</label>
    <referenceTo>Additional_Compensation_Rules__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>