GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Additonal_Compensation_Checker__c.field-meta.xml
<CustomField>
    <fullName>Additonal_Compensation_Checker__c</fullName>
    <description>This filed is used to check if the compensation need reprocessing because of a change in Additional Compensation Rule. If the value of this fielsd is different from the ACR_Reprocess_Count__c on the Train, we have to reprocess the compensation. This fields should not be modified manually</description>
    <label>Additonal Compensation Checker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>