GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( ISBLANK(CustomerC__r.Account.BillingStreet) || ISBLANK(CustomerC__r.Account.BillingCity), IMAGE(&quot;/img/func_icons/util/alert16.gif&quot;,&quot;Alert&quot;) + &quot; CUSTOMER ADDRESS HAS MISSING STREET AND/OR CITY&quot;,
if(LEN(CustomerC__r.Account.BillingStreet)&gt;0, CustomerC__r.Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(CustomerC__r.Account.BillingCity)&gt;0, CustomerC__r.Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(CustomerC__r.Account.BillingState)&gt;0, CustomerC__r.Account.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(CustomerC__r.Account.BillingPostalCode)&gt;0, CustomerC__r.Account.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN( CustomerC__r.Account.BillingCountry) &gt;0, CustomerC__r.Account.BillingCountry,&quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>