GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <formula>TEXT(Comp_Approval_Status__c)</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>