GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Automation_System__c.field-meta.xml
<CustomField>
    <fullName>Automation_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then compensation record was updated (or even created) by corona virus fulfillment logic</description>
    <label>Automation (System)</label>
    <type>Checkbox</type>
</CustomField>