GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Base_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Base_Compensation__c</fullName>
    <description>Ticket Price * Base % (Custom Setting - % depends on delay time)</description>
    <inlineHelpText>This is compensation amount based on the ticket delay
Base Compensation = Ticket Price * Base % (Custom Setting - % depends on delay time)</inlineHelpText>
    <label>Base Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>