GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Booking_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sales_Channel__c</fullName>
    <formula>Source_Ticket__r.Booking_Sales_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Sales Channel</label>
    <type>Text</type>
</CustomField>