GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Calculate_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Compensation</label>
    <type>Checkbox</type>
</CustomField>