GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Carriage__c.field-meta.xml
<CustomField>
    <fullName>Carriage__c</fullName>
    <label>Carriage</label>
    <length>28</length>
    <type>Text</type>
</CustomField>