GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <formula>IF( AND(NOT( ISBLANK( Train__c )), NOT( ISBLANK( Train__r.Carrier__c )), NOT(Train__r.Carrier__c == &#39;Purple&#39;))  , 
Train__r.Carrier__c, 
IF( AND(NOT( ISBLANK(  Ticket__c )) ,NOT( TEXT( Ticket__r.Carrier__c ) == &#39;&#39;), NOT(TEXT(Ticket__r.Carrier__c) == &#39;Purple&#39;))  , 
TEXT(Ticket__r.Carrier__c), 
IF( AND(NOT( ISBLANK(  Case__c )) ,NOT( TEXT( Case__r.Carrier__c ) == &#39;&#39;), NOT(TEXT(Case__r.Carrier__c) == &#39;Purple&#39;))  , 
TEXT(Case__r.Carrier__c), 
IF( AND(NOT( ISBLANK(  CreatedById )) , NOT( TEXT( CreatedBy.Train_Service__c  ) == &#39;&#39;),  NOT(TEXT(CreatedBy.Train_Service__c ) == &#39;Purple&#39;)) ,
TEXT(CreatedBy.Train_Service__c ),
&#39;Blue&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier</label>
    <type>Text</type>
</CustomField>