GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Carrier_was_defaulted__c.field-meta.xml
<CustomField>
    <fullName>Carrier_was_defaulted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier was defaulted</label>
    <type>Checkbox</type>
</CustomField>