GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Claim_Email__c.field-meta.xml
<CustomField>
    <fullName>Claim_Email__c</fullName>
    <description>Email of person claiming email</description>
    <label>Claim Email</label>
    <type>Email</type>
</CustomField>