GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Claim_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Claim_Email_Domain__c</fullName>
    <formula>MID(Claim_Email__c,FIND(&quot;@&quot;,Claim_Email__c),30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Email Domain</label>
    <type>Text</type>
</CustomField>