GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Error Occured</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>