GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Claimed_Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Compensation_Type__c</fullName>
    <label>Claimed Compensation Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>PRR</fullName>
            </value>
            <value>
                <fullName>Voyager Voucher</fullName>
            </value>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Voyager Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>