GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Date__c</fullName>
    <label>Claimed Date</label>
    <type>DateTime</type>
</CustomField>