GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Comp_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Comp_Approval_Status__c</fullName>
    <label>Comp Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>