GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Comp_Ticket_Record_Needed__c.field-meta.xml
<CustomField>
    <fullName>Comp_Ticket_Record_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comp-Ticket Record Needed?</label>
    <type>Checkbox</type>
</CustomField>