GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Compensate_My_Existing_Card__c.field-meta.xml
<CustomField>
    <fullName>Compensate_My_Existing_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensate My Existing Card</label>
    <type>Checkbox</type>
</CustomField>