GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Compensation_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Claim_Type__c</fullName>
    <formula>If (OR ( AND (RecordType.Name =&#39;Online&#39;, OR( ISPICKVAL(Claimed_Compensation_Type__c ,&#39;Voucher&#39;), ISPICKVAL(Claimed_Compensation_Type__c ,&#39;Points&#39;))),
OR(RecordType.Name =&#39;Voucher&#39;,RecordType.Name =&#39;Points&#39;)),&#39;Points/Voucher&#39;, IF(OR(RecordType.Name =&#39;Bank Transfer&#39;,RecordType.Name =&#39;Card Refund&#39;, 
RecordType.Name =&#39;Paypal&#39;),&#39;Cash&#39;,&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tells whether the claim is a cash claim or not</inlineHelpText>
    <label>Compensation Claim Type</label>
    <type>Text</type>
</CustomField>