GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Compensation_Currency__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Currency__c</fullName>
    <formula>IF( RecordType.DeveloperName = &#39;Online&#39;, Original_Currency__c , TEXT(Payment_Currency__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation Currency</label>
    <type>Text</type>
</CustomField>