GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Compensation_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Legacy_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>To capture legacy ID from the old Thango system</description>
    <externalId>true</externalId>
    <inlineHelpText>To capture legacy ID from the old Thango system</inlineHelpText>
    <label>Compensation Legacy Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>