GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <description>Returns the name of the Record Type</description>
    <formula>RecordType.Name</formula>
    <label>Compensation Type</label>
    <type>Text</type>
</CustomField>