GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <formula>CustomerC__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>