GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Current_Status_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_of_Case__c</fullName>
    <formula>Text(Case__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status of Case</label>
    <type>Text</type>
</CustomField>