GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Populated by Customer (lookup). This field must be populated for the Kyriba Pay Run process (PRR)</description>
    <formula>CustomerC__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>