GearsetPOC/force-app/main/default/objects/Compensation__c/fields/CustomerC__c.field-meta.xml
<CustomField>
    <fullName>CustomerC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer PersonAccount lookup to Contact record</description>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Compensations can only be linked to Customers (with person accounts) NOT Contacts</errorMessage>
        <filterItems>
            <field>Contact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compensation</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>