GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Datacash_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datacash Cancelled</label>
    <type>Checkbox</type>
</CustomField>