GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Datacash_Reference__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Reference__c</fullName>
    <label>Voucher Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>