GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Datacash_Reference_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Datacash_Reference_CreatedDate__c</fullName>
    <label>Voucher Reference CreatedDate</label>
    <type>DateTime</type>
</CustomField>