GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Date_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Travel__c</fullName>
    <description>This will be the date the passenger travelled on</description>
    <label>Date of Travel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>