GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Date_of_Travel_date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Travel_date__c</fullName>
    <formula>IF(Case__c != null, Case__r.TCN__r.Departure_Date__c, Train__r.Departure_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Travel (date)</label>
    <type>Date</type>
</CustomField>