GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Delay_Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration_Mins__c</fullName>
    <label>Delay Duration (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>