GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Departure_Date_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time_Format__c</fullName>
    <formula>DATETIMEVALUE(MID(Train__r.Name,8,19))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date Time Format</label>
    <type>DateTime</type>
</CustomField>