GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Enclosure_Code__c.field-meta.xml
<CustomField>
    <fullName>Enclosure_Code__c</fullName>
    <formula>IF ( RecordType.Name == &#39;Bank Transfer&#39;, 336,  IF (RecordType.Name == &#39;Paypal&#39;,468,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System parameter automatically generated for Kyriba
- 336 for Bank Transfers
- 468 for Paypal</inlineHelpText>
    <label>Kyriba Enclosure Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>