GearsetPOC/force-app/main/default/objects/Compensation__c/fields/eVoucher_appropriate__c.field-meta.xml
<CustomField>
    <fullName>eVoucher_appropriate__c</fullName>
    <label>eVoucher appropriate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>