GearsetPOC/force-app/main/default/objects/Compensation__c/fields/eVoucher_Flag__c.field-meta.xml
<CustomField>
    <fullName>eVoucher_Flag__c</fullName>
    <formula>IF(
  ISPICKVAL(eVoucher_appropriate__c, &#39;Yes&#39;), 
  IMAGE(&#39;/resource/Tick&#39;, &#39;eVoucher permitted&#39;), 
  IMAGE(&#39;/resource/Cross&#39;, &#39;No eVoucher permitted&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eVoucher flag</label>
    <type>Text</type>
</CustomField>