GearsetPOC/force-app/main/default/objects/Compensation__c/fields/eVoucher_rule_override__c.field-meta.xml
<CustomField>
    <fullName>eVoucher_rule_override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this field to override the rule that will apply to the related eVoucher</description>
    <inlineHelpText>Use this field to override the rule that will apply to the related eVoucher</inlineHelpText>
    <label>eVoucher rule override</label>
    <referenceTo>Promotional_eVoucher_rule__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>