GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <inlineHelpText>Once the Kyriba job runs from EIF, the execution date will be filled here with the date when the payments will run (dd/mm/yyyy). Specifications can be found here: https://eurostarwiki.atlassian.net/wiki/display/EIP/Salesforce+-+TMS++Compensation+Services</inlineHelpText>
    <label>Kyriba Planned Execution Date</label>
    <type>Date</type>
</CustomField>