GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Fraud_Flag__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud Flag</label>
    <type>Checkbox</type>
</CustomField>