GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Fraud_Status__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Status__c</fullName>
    <label>Fraud Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>