GearsetPOC/force-app/main/default/objects/Compensation__c/fields/GBP_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>GBP_Payment_Amount__c</fullName>
    <formula>CASE( Payment_Currency__c , 
&#39;GBP&#39;, Total_Compensation_Amt__c , 
&#39;EUR&#39;, Total_Compensation_Amt__c / $Setup.Currency_Rate__c.EUR_Rate__c , 
&#39;USD&#39;, Total_Compensation_Amt__c / $Setup.Currency_Rate__c.USD_Rate__c , 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Compensation Amount (GBP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>