GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Gift__c.Type__c</field>
            <operation>equals</operation>
            <value>Gift</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Gift__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>