GearsetPOC/force-app/main/default/objects/Compensation__c/fields/IBAN_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Account_Number__c</fullName>
    <inlineHelpText>International Bank Account Number</inlineHelpText>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>