GearsetPOC/force-app/main/default/objects/Compensation__c/fields/iLoyalCustomerID__c.field-meta.xml
<CustomField>
    <fullName>iLoyalCustomerID__c</fullName>
    <label>iLoyalCustomerID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>