GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Incident_HistoryTracking__c.field-meta.xml
<CustomField>
    <fullName>Incident_HistoryTracking__c</fullName>
    <label>Incident_HistoryTracking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>