GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>These are the different stages that records can be in with respect to the integration</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Claimed</fullName>
                <default>true</default>
                <label>Not Claimed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>