GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Is_Eligible_Points__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_Points__c</fullName>
    <formula>AND(
CustomerC__c &lt;&gt; &quot;&quot;,
CustomerC__r.Account.DELTA_Loyalty_Member__c &lt;&gt; &quot;&quot;,
ISPICKVAL(CustomerC__r.Account.DELTA_Loyalty_Member__r.MemberStatus, &#39;Active&#39;))</formula>
    <label>Is Eligible Points</label>
    <type>Checkbox</type>
</CustomField>