GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Is_Excluded_From_Delay_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Is_Excluded_From_Delay_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this value is true, then this compensation has not met the required criteria for Delay Compensation.</description>
    <label>Is Excluded From Delay Compensation</label>
    <type>Checkbox</type>
</CustomField>