GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Is_Online_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Is_Online_Compensation__c</fullName>
    <description>Created to Support Marketing Cloud Synchronisation: https://eurostar.atlassian.net/browse/DECS-1467</description>
    <formula>RecordType.DeveloperName = &quot;Online&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Online Compensation</label>
    <type>Checkbox</type>
</CustomField>