GearsetPOC/force-app/main/default/objects/Compensation__c/fields/isEvoucherExists__c.field-meta.xml
<CustomField>
    <fullName>isEvoucherExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEvoucherExists</label>
    <type>Checkbox</type>
</CustomField>