GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Link_to_all_tickets_for_same_train_PNR__c.field-meta.xml
<CustomField>
    <fullName>Link_to_all_tickets_for_same_train_PNR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link to all tickets for same train/PNR?</label>
    <type>Checkbox</type>
</CustomField>