GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Link_To_All_Tickets_of_the_Same_PNR__c.field-meta.xml
<CustomField>
    <fullName>Link_To_All_Tickets_of_the_Same_PNR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Link all tickets of the same PNR to this compensation</description>
    <inlineHelpText>Link all tickets of the same PNR to this compensation. This is for COVID Cases</inlineHelpText>
    <label>Link To All Tickets of the Same PNR</label>
    <type>Checkbox</type>
</CustomField>