GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Loyalty_Member__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member__c</fullName>
    <formula>Source_Ticket__r.Booker__r.DELTA_Loyalty_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Member</label>
    <type>Text</type>
</CustomField>