GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Manually_Processed__c.field-meta.xml
<CustomField>
    <fullName>Manually_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if compensation has been manually processed</inlineHelpText>
    <label>Manually Processed</label>
    <type>Checkbox</type>
</CustomField>