GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Manually_Processed_BSP_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Manually_Processed_BSP_ONLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Processed (BSP ONLY)</label>
    <type>Checkbox</type>
</CustomField>