GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Manually_Processed_CC__c.field-meta.xml
<CustomField>
    <fullName>Manually_Processed_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Processed (CC)</label>
    <type>Checkbox</type>
</CustomField>