GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <formula>CustomerC__r.Account.DELTA_Loyalty_Member__r.MembershipNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>