GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Message_2__c.field-meta.xml
<CustomField>
    <fullName>Message_2__c</fullName>
    <label>Message 2</label>
    <length>300</length>
    <type>Html</type>
</CustomField>