GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Modified_Time__c</fullName>
    <formula>MID (TEXT (  LastModifiedDate  - (0.0417 * 4)), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Time</label>
    <type>Text</type>
</CustomField>