GearsetPOC/force-app/main/default/objects/Compensation__c/fields/No_Further_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Further_Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick if no further action is required by the compensation owner</description>
    <inlineHelpText>Tick if no further action is required by the compensation owner</inlineHelpText>
    <label>No Further Action Required</label>
    <type>Checkbox</type>
</CustomField>