GearsetPOC/force-app/main/default/objects/Compensation__c/fields/No_TCN_to_Use__c.field-meta.xml
<CustomField>
    <fullName>No_TCN_to_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No TCN to Use</label>
    <type>Checkbox</type>
</CustomField>