GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Pax_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Pax_Type_Filter__c</fullName>
    <formula>Source_Ticket__r.PAX_Type_Filter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pax Type Filter</label>
    <type>Text</type>
</CustomField>