GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>