GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Paypal_email__c.field-meta.xml
<CustomField>
    <fullName>Paypal_email__c</fullName>
    <description>This may be different from contact email address</description>
    <label>Paypal email</label>
    <type>Email</type>
</CustomField>