GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Points_Amount__c.field-meta.xml
<CustomField>
    <fullName>Points_Amount__c</fullName>
    <label>Points Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>