GearsetPOC/force-app/main/default/objects/Compensation__c/fields/Points_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Points_Compensation_Amount__c</fullName>
    <label>Points Compensation Amount</label>
    <length>32</length>
    <type>Text</type>
</CustomField>